--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Files/DLX_vhd/DATAPATH/vsim.wlf
 Files/DLX_vhd/DATAPATH/ADD_SUB_BLOCK/work/
 Files/DLX_vhd/DATAPATH/ADD_SUB_BLOCK/transcript
 Files/DLX_vhd/DATAPATH/ADD_SUB_BLOCK/vsim.wlf
+work
+transcript
+vsim.wlf
